feature: removed testing public values

--- a/public/notes/algorithms/big-o-notation/index.html
+++ b/public/notes/algorithms/big-o-notation/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -13,7 +13,7 @@ In reality what big o will do estimate how much a code will need to finish based
 For measuring so we use the &lsquo;O&rsquo; notation. To things don&rsquo;t keep too theoretical, let&rsquo;s suppose the following code:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/algorithms/big-o-notation/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/algorithms/big-o-notation/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Big O Notation is the way people use to talk about the growing of some algorithm. This can be used on performance, memory usage and others, even though talking about these we require more than simply Big O. When working with Big O, we will work actually with a rule that can be applied to a code to measure it, but it doesn’t mean that code will always be run slowly or fast. Actually, an optimized code can run slowly if the machine running it isn’t fast enough, while, a non-optimized code can run it with not so much problems if the machine running it is fast enough for so. In reality what big o will do estimate how much a code will need to finish based on an input I, or grow in terms of memory. Here it’s being talked mainly about the amount of instructions to finish some algorithm. For measuring so we use the ‘O’ notation. To things don’t keep too theoretical, let’s suppose the following code:">
@@ -23,7 +23,7 @@ For measuring so we use the &lsquo;O&rsquo; notation. To things don&rsquo;t keep
 <title>Big O Notation | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/algorithms/big-o-notation/">
+<link rel="canonical" href="https://example.org/notes/algorithms/big-o-notation/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
