--- a/public/notes/algorithms/recursion/index.html
+++ b/public/notes/algorithms/recursion/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -19,7 +19,7 @@ Then, this rule is recursive as well, because it uses itself to determine that $
 Going back to programming, one kind of data structure that is recursive are [[LinkedList|linked lists]] and [[Trees|trees]], for example:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/algorithms/recursion/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/algorithms/recursion/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Recursion is occurs when a something uses itself on its definition, for example, with mathematical functions: $f(x) = 1 &#43; f(x-1)$ This function f, on it’s definition, calls itself, then, it’s considered a recursive function. That can be written in it’s code format with the following:
@@ -30,7 +30,7 @@ fn f(n:i32) -&gt; i32{ 1 &#43; f(n-1) }But recursion can appear in other situati
 <title>Recursion | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/algorithms/recursion/">
+<link rel="canonical" href="https://example.org/notes/algorithms/recursion/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
