--- a/public/notes/algorithms/treetraversal/posorder/index.html
+++ b/public/notes/algorithms/treetraversal/posorder/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -11,7 +11,7 @@ https://github.com/alex-shpak/hugo-book
 <meta name="description" content="PosOrder is practically the opposite of [[PreOrder]] when working with trees. [[PreOrder]] defines that something will happen with the children first, then, it will happen with the parent. PosOrder is the opposite, it happens with the parent first, and then the children. One example is an [[UI]] that is defined as a Tree, which isn&rsquo;t unusual. When rendering so, we cannot render the children before the parents, which would be categorized as PreOrder, instead, we MUST, draw first the parents and going deeper on the children, then, the children will appear on top of the parents. This can be reached by the following code:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/algorithms/treetraversal/posorder/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/algorithms/treetraversal/posorder/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="PosOrder is practically the opposite of [[PreOrder]] when working with trees. [[PreOrder]] defines that something will happen with the children first, then, it will happen with the parent. PosOrder is the opposite, it happens with the parent first, and then the children. One example is an [[UI]] that is defined as a Tree, which isn’t unusual. When rendering so, we cannot render the children before the parents, which would be categorized as PreOrder, instead, we MUST, draw first the parents and going deeper on the children, then, the children will appear on top of the parents. This can be reached by the following code:">
@@ -21,7 +21,7 @@ https://github.com/alex-shpak/hugo-book
 <title>Pos Order | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/algorithms/treetraversal/posorder/">
+<link rel="canonical" href="https://example.org/notes/algorithms/treetraversal/posorder/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
