--- a/public/notes/algorithms/treetraversal/preorder/index.html
+++ b/public/notes/algorithms/treetraversal/preorder/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -14,7 +14,7 @@ This can be understood better at the [[GenericTree]]. Supposing we traverse that
 Leaving the theory, a practical code using [[Recursion]] I made is the following:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/algorithms/treetraversal/preorder/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/algorithms/treetraversal/preorder/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="When working with trees, at some times we want to traverse it and work with the children before the parent, that method is called ‘PreOrder’. For example, on making my UI library, I had to write a way to know which element I was clicking at, for so, it was required the usage of PreOrder. Since the children are drawn after the parent, they’re ‘closer’ to the screen, so it makes sense for them to be checked, then, i should check for it’s parent after checking for them, which then, configures as a PreOrder traverse. This can be understood better at the [[GenericTree]]. Supposing we traverse that tree using [[PosOrder]], and we print the numbers, the result would be something like 1,2,3,4,5,6,7,8,9,10, thus, we are looking for the parent then for the children, but with our case its quite the opposite, in case we wanted 10,9,8,7,6,5,4,3,2,1which will look for the children first. Leaving the theory, a practical code using [[Recursion]] I made is the following:">
@@ -24,7 +24,7 @@ Leaving the theory, a practical code using [[Recursion]] I made is the following
 <title>Pre Order | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/algorithms/treetraversal/preorder/">
+<link rel="canonical" href="https://example.org/notes/algorithms/treetraversal/preorder/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
