--- a/public/notes/datastructures/vector/index.html
+++ b/public/notes/datastructures/vector/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -14,7 +14,7 @@ Vectors are dynamic sized arrays, then, it&rsquo;s correct to assume that they d
 Let&rsquo;s say the following:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/datastructures/vector/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/datastructures/vector/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="When working with data, one thing that we might want to do is have a list of elements, independently of the way it’s structured, we want to have elements on a list. The first thing we can think of is using an [[Array]] but, if the content size is not known during runtime, we cannot simply store it on a array, since, they got fixed size. To manipulate something like this then, we must allocate data during runtime, thus, we think firstly on rely on top of things like [[Heap|heap]] allocation. That’s exactly the way Vectors work. Vectors are dynamic sized arrays, then, it’s correct to assume that they do allocate things on heap, more precisely, they pre-allocate an specific amount of bytes required to start working. Let’s say the following:">
@@ -24,7 +24,7 @@ Let&rsquo;s say the following:">
 <title>Vector | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/datastructures/vector/">
+<link rel="canonical" href="https://example.org/notes/datastructures/vector/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
