--- a/public/notes/io/streams/index.html
+++ b/public/notes/io/streams/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -19,7 +19,7 @@ Buffer: When using streams, data doesn&rsquo;t all arrive at once. It comes in c
 In summary: Streams allow efficient processing of large amounts of data without overloading memory and improving application performance.">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/io/streams/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/io/streams/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Stream is a way to process data safely and efficiently. It works piece by piece, in chunks. By processing data this way, without loading all data into memory at once, it prevents server overload and improves speed and security.
@@ -31,7 +31,7 @@ File Processing: Using the fs library, we can create a stream to process a file 
 <title>Streams | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/io/streams/">
+<link rel="canonical" href="https://example.org/notes/io/streams/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
