--- a/public/notes/protocols/protocol/index.html
+++ b/public/notes/protocols/protocol/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -14,7 +14,7 @@ Protocols are ways to determine a default action of some. For example, when work
 Some explanations about how to design some, and exactly what a protocol does, can be found at [[MATP]] where i planned all the core idea of a protocol for minecraft bedrock addons">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/protocols/protocol/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/protocols/protocol/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Definition # Protocols are ways to determine a default action of some. For example, when working with the internet, there are a lot of protocols that determine how the data will be sent, received, and how to act if something fails; one of them are [[TCP]]. Generally the end-user, nor the programmer write a protocol, or it’s specification, but use something that already implements this protocol. In case of TCP as mentioned, the implementation is defined by the Operating System, so the programmer writes a program that uses it from the OS itself. Some explanations about how to design some, and exactly what a protocol does, can be found at [[MATP]] where i planned all the core idea of a protocol for minecraft bedrock addons">
@@ -24,7 +24,7 @@ Some explanations about how to design some, and exactly what a protocol does, ca
 <title>Protocol | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/protocols/protocol/">
+<link rel="canonical" href="https://example.org/notes/protocols/protocol/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
