--- a/public/notes/web/nuts-and-bolts/index.html
+++ b/public/notes/web/nuts-and-bolts/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -15,7 +15,7 @@ When talking about the packet-switches, understanding what is a packet is crucia
 Some examples of packet-switches are routers, that are defined on the Layer 3 of [[OSI|OSI model]] and Ethernet switches">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/web/nuts-and-bolts/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/web/nuts-and-bolts/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Packet-switches and Communication-links # On the web, the way for sending bits from one computer to another, are made with packet-switches and communication-links, where, the communication-link is the way the data will be transferred. If the data is being sent via Wifi, then the communication-link is radio-waves. If it’s being sent via cables, the cable itself is the communication-link. When talking about the packet-switches, understanding what is a packet is crucial, but not too hard. When a content is sent, normally it’s not sent fully and once, actually, it is sent [[Streamming|streamed]], thus, each piece of the content sent, is considered a packet. What actually happens is that this little piece will get it’s header written by the packet-switch, then, the one that did so, will try to send it to the target computer, but, if the computer is not on the current [[LAN]] then it sends the data again to another packet-switch, that then does the same. Some examples of packet-switches are routers, that are defined on the Layer 3 of [[OSI|OSI model]] and Ethernet switches">
@@ -25,7 +25,7 @@ Some examples of packet-switches are routers, that are defined on the Layer 3 of
 <title>Nuts and Bolts | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/web/nuts-and-bolts/">
+<link rel="canonical" href="https://example.org/notes/web/nuts-and-bolts/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
