--- a/public/notes/concurrency/distributedlocks/index.html
+++ b/public/notes/concurrency/distributedlocks/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -20,7 +20,7 @@ Examples: distributes databases(Cassandra, MongoDb Cluster), distributed file sy
 In short:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/concurrency/distributedlocks/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/concurrency/distributedlocks/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="When we talk about Distributed Locks, we are mainly talking about distributed systems, before commenting on distributed Locks, we will talk about distributed systems.
@@ -32,7 +32,7 @@ Network Communication: nodes exchanges messages (they don’t share memory direc
 <title>Distributed Locks | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/concurrency/distributedlocks/">
+<link rel="canonical" href="https://example.org/notes/concurrency/distributedlocks/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
