--- a/public/notes/excalidraw/generictree/index.html
+++ b/public/notes/excalidraw/generictree/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -147,7 +147,7 @@ GnNoFWXlLzpCKU0vEMCX9L1&#43;Ti79b4NB7WL4V1kHNIDVgglAulxK8hdUvYNIt9nNy4ZcGQxb8GyW
 ZQByAAAU8&#43;ffG3RbfNvqAO254AAEpNQNpZQFs&#43;VR1vG3wgjtyO94Bl0O3hZbt&#43;clqhRvqXaZuAKXE4DKPSDNpdMDejJv/Ti3pbg5/XAWC7uTQx9g99amni7UDn1RaIZoFqAIBP7zAboHejgD5vWYRb3ACW&#43;3655P7hARgEMH9f4BA3cRMIMEE/dq764Q9gwAa48g6P&#43;7Ba2MAYG6CZBgPMsAeyDaJDtBP33739xCmuftTOrwQQsF8grBAA==%%">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/excalidraw/generictree/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/excalidraw/generictree/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="==⚠ Switch to EXCALIDRAW VIEW in the MORE OPTIONS menu of this document. ⚠== You can decompress Drawing data with the command palette: ‘Decompress current Excalidraw file’. For more info check in plugin settings under ‘Saving’
@@ -170,7 +170,7 @@ Drawing # N4KAkARALgngDgUwgLgAQQQDwMYEMA2AlgCYBOuA7hADTgQBuCpAzoQPYB2KqATLZMzYBX
 <title>Generic Tree | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/excalidraw/generictree/">
+<link rel="canonical" href="https://example.org/notes/excalidraw/generictree/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
