--- a/public/notes/protocols/matp/index.html
+++ b/public/notes/protocols/matp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -18,7 +18,7 @@ When actually writing it, we will face that both the ID and the message of the s
 So our protocol is defined in theory:">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/protocols/matp/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/protocols/matp/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="MATP(short for Minecraft Addons Transfer Protocol) is just a name for a theoretical protocol used to transfer data between addons on minecraft. It doesn’t exist, then, it’s not used, and I did not implement it anywhere(yet). It’s only the core idea of what a protocol actually does. This is not focused on be 100% correct, but, as said, to give a core idea of what a protocol does. In Minecraft Bedrock, until now(12/aug/25), there is no builtin way to transfer data between the so called ‘addons’, that are modifications inside it, the equivalent to mods on Java. So we must think a way to transfer. One thing that is does have, is to send messages to every ‘addon’, and each decide how to work with that message. That is called [[https://learn.microsoft.com/en-us/minecraft/creator/scriptapi/minecraft/server/scripteventcommandmessageafterevent?view=minecraft-bedrock-stable|scriptEvent]], the thing is that we need 2 things, an ID, and the content of the message. As the protocol is a bunch of rules the end users must follow to be able to interact, we can define it like the following: On the id of the scriptevent, we specify the sender ID, and the target the packet is being sent to. So far, that’s all. On the message we can simply send the bytes, but we would need some header to tell some information about the message being sent. Let’s say we want it to have confirmations about the things, so, when an addon A sends the data to the addon B, the addon B confirms it received. Then, on the header we would define if the type of message is a ‘Request’, ‘Response’, or ‘Reply’. When actually writing it, we will face that both the ID and the message of the scriptevent are strings, so, if we send something that contains a [[Null Character|null character]], it will fail and the content will be lost. Then we have to determine a way to send the content in a manner it will not be lost. We can use something like [[Base64|base64]], but it does add too much overhead; After using it the final content gets about 33% larger, so we don’t want it. As the target is minecraft addons, which run on JS in a [[https://bellard.org/quickjs/|quickjs]] environment, the strings are understood by default as [[Utf16]], so we can instead of sending bytes, send a packet of 2 bytes. I didn’t say, but until where i know, the total limit of chars per message is 2048, so, by sending 1 char as 1 byte, we would send only up to 2kb per message, if instead we compact 2 bytes and compact them into a single char, we could be able to send up to 4kb, so, we could use something like [[Base65536]] to actually do that before transfering the data. So our protocol is defined in theory:">
@@ -28,7 +28,7 @@ So our protocol is defined in theory:">
 <title>Matp | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/protocols/matp/">
+<link rel="canonical" href="https://example.org/notes/protocols/matp/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
