--- a/public/notes/readme/index.html
+++ b/public/notes/readme/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -17,7 +17,7 @@ Intention
 Note everything I know and I learn to make it accessible to others. So, this is supposed to accept contribution of others about anything they want to talk about that involves programming and the one writing it down finds interesting to share with people">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/readme/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/readme/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="My Obsidian Notes.
@@ -29,7 +29,7 @@ Intention # Note everything I know and I learn to make it accessible to others. 
 <title>Readme | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/readme/">
+<link rel="canonical" href="https://example.org/notes/readme/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
