--- a/public/notes/web/dsl/index.html
+++ b/public/notes/web/dsl/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -12,7 +12,7 @@ https://github.com/alex-shpak/hugo-book
 Keeping in mind a request from the web, when made, it&rsquo;s content is transformed to Radio electromagnetic waves, then the router from the [[ISP]] receives it, decode and sends to the [[ISP]] central office via cable, it depends on the way the ISP will make so, but let&rsquo;s now suppose it&rsquo;s with copper cables. This is called then DSL. When working with it, the router will decode the content sent from the device, maybe via [[Wifi]], then depending on the kind of data it&rsquo;s, it will be sent in a determined frequency. When working with talking, because the ISP can be the provider of telephones as well, the data sent will be around 0 to 4khz, when uploading, it will be sent around 4khz to 50khz, and above that, is treated as download content, normally between 50khz to 1mhz">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:url" content="http://localhost:1313/notes/web/dsl/">
+<meta name="color-scheme" content="light dark"><meta property="og:url" content="https://example.org/notes/web/dsl/">
   <meta property="og:site_name" content="My New Hugo Site">
   <meta property="og:title" content="My New Hugo Site">
   <meta property="og:description" content="Continuing with the [[Nuts-and-Bolts]] about how data is shared between on web, when transferring data from a Computer or from a Cellphone to another one, there are some steps. [[Protocol|Protocols]] just make a way to both Ends to understand that data. For example, a request, in terms of web, is a content sent normally via [[TCP]] using the [[HTTP]] protocol where both Ends will understand. But the way that data is sent on the physical world is a bit different. Keeping in mind a request from the web, when made, it’s content is transformed to Radio electromagnetic waves, then the router from the [[ISP]] receives it, decode and sends to the [[ISP]] central office via cable, it depends on the way the ISP will make so, but let’s now suppose it’s with copper cables. This is called then DSL. When working with it, the router will decode the content sent from the device, maybe via [[Wifi]], then depending on the kind of data it’s, it will be sent in a determined frequency. When working with talking, because the ISP can be the provider of telephones as well, the data sent will be around 0 to 4khz, when uploading, it will be sent around 4khz to 50khz, and above that, is treated as download content, normally between 50khz to 1mhz">
@@ -22,7 +22,7 @@ Keeping in mind a request from the web, when made, it&rsquo;s content is transfo
 <title>DSL | My New Hugo Site</title>
 <link rel="icon" href="/favicon.png" >
 <link rel="manifest" href="/manifest.json">
-<link rel="canonical" href="http://localhost:1313/notes/web/dsl/">
+<link rel="canonical" href="https://example.org/notes/web/dsl/">
 <link rel="stylesheet" href="/book.min.1a2cf7ebc00040820952c4e2341e71d7d5b60d173ee3438ff388e77e880de9df.css" integrity="sha256-Giz368AAQIIJUsTiNB5x19W2DRc&#43;40OP84jnfogN6d8=" crossorigin="anonymous">
 
 
